fixed lists, change List.of to Arrays.asList